# jira_reports

./: README.md  pyproject.toml
.github/workflows/: pylint.yml
jira_reports/: __main__.py  config.py  report_types.py  timeframe.py
tests/: test_config.py  test_report_types.py  test_timeframe.py
tests/references/: example_config.toml
