[tool.poetry]
name = "jira_reports"
version = "0.1.0"
description = "Creates graphical reports based of the JIRA REST API"
authors = ["Shane Smith <shane.smith@altec.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
jira = "^2.0.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
